# syda

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CNAME  CONTRIBUTING.md  DCO  Dockerfile  LICENSE  MANIFEST.in  README-DOCKER.md  README.md  SETUP.md  WEB-README.md  docker-compose.yml  index.html  mkdocs.yml  netlify.toml  nginx.conf  pyproject.toml  requirements.txt  schema_reference.md  schema_reference_v1.0.md  setup.py  sitemap.xml  start-dev.sh  test.py  test_query_params.py
.claude/skills/: release-marketing.md
.cursor/rules/: python.md
.github/workflows/: deploy-docs.yml
data/: categories.csv  products.csv
deep_dive/cli/: index.html
deep_dive/combined_data/: index.html
deep_dive/custom_generators/: index.html
deep_dive/database_integration/: index.html
deep_dive/foreign_keys/: index.html
deep_dive/large_dataset/: index.html
deep_dive/model_configuration/: index.html
deep_dive/output_options/: index.html
deep_dive/structured_data/: index.html
deep_dive/unstructured_documents/: index.html
docs/: SCHEMA_VALIDATORS_CHEATSHEET.md  SCHEMA_VALIDATORS_QUICKSTART.md  index.md  quickstart.md  schema_reference.md
docs/deep_dive/: cli.md  combined_data.md  core_api.md  custom_generators.md  database_integration.md  error_handling.md  foreign_keys.md  large_dataset.md  model_configuration.md  output_options.md  structured_data.md  unstructured_documents.md
docs/examples/: miscellaneous.md  schema_validators_usage.md
docs/schema_reference/: field_types.md  foreign_keys.md  special_field_types.md
examples/: quickstart.py  schema_validators_examples.py  test_auto_related_dict.py  test_auto_related_json_yaml.py  test_auto_related_models.py  test_auto_related_sqlalchemy_models.py  test_dict.py  test_json_only_schemas.py  test_json_output.py  test_json_yaml_schemas.py  test_model_selection.py  test_multiple_foreign_keys.py  test_proxy_configuration.py  test_sqlalchemy_integration.py  test_sqlalchemy_models.py  test_structured_synthetic_data.py  test_unified_generation.py  test_yaml_only_schemas.py
examples/cli/: create_demo_db.py  demo.sh  demo_large_dataset.sh
examples/crm/: models.py  test_crm_templates.py
examples/database_integration/: create_mysql_demo.sql  create_postgres_demo.sql  example_load_schemas.py  example_postgres.py  example_save_schemas.py  healthcare_demo.db
examples/force_llm/: example_force_llm.py  schema_products.yml
examples/health_insurance_claims/: demo.py  healthcare_demo.db
examples/invalid_schemas/: example_dict_schemas.py  test_dict_schemas.py  test_schema_validation.py
examples/large_dataset/: README.md  example_large_dataset_postgres.py
examples/miscellaneous/: index.html
examples/model_selection/: example_azureopenai_models.py  example_claude_models.py  example_gemini_models.py  example_grok_models.py  example_openai_compatible_models.py  example_openai_models.py  test_claude_models.py  test_openai_models.py
examples/quickstart_output_data/: categories.csv  products.csv  run_report_20260608_024555.html  run_report_20260609_014948.html  run_report_20260609_020728.html
examples/retail/: test_retail_schemas.py
examples/schema_files/: author.json  book.yml  review.json
examples/structured_only/: example_dict_schemas.py  example_json_output.py  example_json_schemas.py  example_proxy_configuration.py  example_sqlalchemy_models.py  example_yaml_schemas.py  test_dict_schemas.py  test_json_output.py  test_json_schemas.py  test_sqlalchemy_models.py  test_yaml_schemas.py
examples/template_schemas/: invoice_schema.json
examples/templates/: invoice_template.html  invoice_template.txt
quickstart/: index.html
schema_inference/: README.md  db_schema_inference.py  pytest.ini  schema_modules.py  syda_integration.py  test_modules.py
schema_reference/field_types/: index.html
schema_reference/foreign_keys/: index.html
schema_reference/special_field_types/: index.html
scripts/: pre_release_test.sh
search/: search_index.json
service/: app.py  database.py  models.py  run_server.py
service/alembic/: env.py
site/: 404.html  index.html  robots.txt  sitemap.xml
site/quickstart/: index.html
site/schema_reference/: index.html
site/search/: search_index.json
syda/: __init__.py  cli.py  codegen_cache.py  custom_generators.py  db_schema_loader.py  dependency_handler.py  generate.py  generator_utils.py  llm.py  output.py  run_report.py  schema_loader.py  schemas.py  storage.py  structured.py  template_processor.py  templates.py  unified_schema_handler.py  unstructured.py  utils.py  validators.py
syda/schema_versions/: schema_reference_v1.0.md
tests/: __init__.py  test_cli.py  test_custom_generators.py  test_db_schema.py  test_dependency_handler.py  test_generate.py  test_llm.py  test_output.py  test_schema_loader.py  test_schemas.py  test_templates.py  test_unstructured.py  test_utils.py  test_validators.py  test_validators_integration.py
web/: requirements.md
web/api/: main.py  (+13 more)
zNOTES/: README_SCHEMA_VALIDATION.md  SCHEMA_VALIDATION_FIX.md  SCHEMA_VALIDATION_VISUAL_GUIDE.md  SCHEMA_VALIDATORS_DOCUMENTATION_COMPLETE.md  SCHEMA_VALIDATORS_DOCUMENTATION_INDEX.md  VALIDATION_FIX_SUMMARY.md  VALIDATION_QUICK_REFERENCE.md  VALIDATORS_DOCUMENTATION_SUMMARY.md
(+316 files in other folders)
